@@ -152,6 +152,9 @@ void MINMAX::run( Session* session, const string& argument ){
   tmp = arg3.substr( 0, delimitter );
   (*(session->image))->max[nchan] = atof( tmp.c_str() );
 
+  // Indicate that we have a user-defined min/max
+  session->view->minmax = true;
+
   if( session->loglevel >= 2 ) *(session->logfile) << "MINMAX :: set to " << (*(session->image))->min[nchan] << ", "
 						   << (*(session->image))->max[nchan] << " for channel " << nchan << endl;
 }
